# FableForge-Reborn

./: .gitignore  .todo  Cargo.toml  Mode diagram.excalidraw  Program.cs  README.md  Settings.cs  generate_diff.bat  vtt.csproj  vtt.sln
client/: Cargo.toml
client/src/: button.rs  config.rs  consts.rs  main.rs  smart_camera.rs  token.rs  websocket.rs
common/: Cargo.toml
common/src/: lib.rs
datatypes/: Campaign.cs  Character.cs  Scene.cs
managers/: CampaignManager.cs  ImageManager.cs  ModeManager.cs
modes/: CampaignListMode.cs  CampaignMode.cs  Character.cs  CharacterList.cs  CharacterListMode.cs  CharacterMode.cs  Cmd.cs  CmdMode.cs  DebugMode.cs  DragableMode.cs  Map.cs  MapListMode.cs  MapMode.cs  Mode.cs  ModeManager.cs
server/: Cargo.toml
server/src/: json_schemas.rs  main.rs  state.rs
src/: config.rs  main.rs  smart_camera.rs  token.rs
src/managers/: mod.rs  mode_manager.rs
src/modes/: debug_mode.rs  mod.rs  mode.rs
src/utils/: context.rs  helper.rs  mod.rs  smart_camera.rs
src/widgets/: abc.rs  button.rs  button_collection.rs  button_style.rs  choice_card.rs  mod.rs  nice_red_square.rs  widget.rs
storage/: Settings.cs  State.cs
utils/: Utils.cs
widgets/: Button.cs  ButtonCollection.cs  ButtonStyle.cs  Choice.cs  Widget.cs
