[package]
name = "ffr-client"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = { version = "5.5.1", features = [] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3"
tungstenite = "0.29.0"
url = "2.5.8"
common = {path = "../common"}
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
