[package]
name = "ffr-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
warp = { version = "0.4.2", features = ["websocket", "server"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
common = {path = "../common"}
